<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/header"
        android:elevation="25dp">

        <TextView
            android:id="@+id/tvLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/logo"
            android:textColor="@color/c1"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="325dp"
            android:clickable="true"
            app:backgroundTint="@android:color/transparent"
            app:borderWidth="0dp"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/baseline_menu_24"
            app:tint="@null"
            tools:layout_editor_absoluteY="14dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/name"
        android:textColor="@color/c1"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:layout_weight="1"
        android:backgroundTint="@color/c1"
        android:backgroundTintMode="add"
        android:text="@string/addexpense"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/llFood"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/inputs"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUser">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_fastfood_24" />

            <TextView
                android:id="@+id/tvFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/food"
                android:textColor="@color/c1" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvPrice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/price"
            android:textColor="@color/c1"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llGroceries"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/inputs"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUser">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivGroceries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_fastfood_24" />

            <TextView
                android:id="@+id/tvGroceries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/grocery"
                android:textColor="@color/c1" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvPrice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/price"
            android:textColor="@color/c1"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTranspo"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/inputs"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llFood">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivTranspo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_directions_car_24" />

            <TextView
                android:id="@+id/tvTranspo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/transpo"
                android:textColor="@color/c1" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvPrice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/price"
            android:textColor="@color/c1"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llUtil"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/inputs"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llGroceries">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivUtil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_fastfood_24" />

            <TextView
                android:id="@+id/tvUtil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/util"
                android:textColor="@color/c1" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvPrice4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/price"
            android:textColor="@color/c1"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSave"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/inputs"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llTranspo">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_fastfood_24" />

            <TextView
                android:id="@+id/tvSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/save"
                android:textColor="@color/c1" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvPrice5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/price"
            android:textColor="@color/c1"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llEntertainment"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/inputs"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llUtil">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_local_movies_24" />

            <TextView
                android:id="@+id/tvEntertainment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/entertainemtn"
                android:textColor="@color/c1" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvPrice6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/price"
            android:textColor="@color/c1"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llHealth"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/inputs"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llSave">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivHealt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_fitness_center_24" />

            <TextView
                android:id="@+id/tvHealth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/FH"
                android:textColor="@color/c1" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvPrice7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/price"
            android:textColor="@color/c1"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llShop"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/inputs"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llEntertainment">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivShop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/baseline_add_shopping_cart_24" />

            <TextView
                android:id="@+id/tvShop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/shop"
                android:textColor="@color/c1" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvPrice8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/price"
            android:textColor="@color/c1"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
